@@ -6,6 +6,9 @@ TODO
 * add support for retrieving identifier values
   - add test
 
+20130904
+* worked on tests
+
 20130413
 * definitions fix
 * updated dependencies
